--- a/style.css
+++ b/style.css
@@ -3,9 +3,22 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: flex-end;
-	margin: auto 5px;
+	margin: auto 25px;
+	height: 30px;
 }
 
+.blabla {
+
+    max-width: 60%;
+    min-width: 0%;
+    border-radius: 25px;
+		outline: 0;
+    border: 1px solid gainsboro;
+    margin-top: 20px;
+    padding: 15px;
+    padding-right: 200px;
+    padding-left: 70px;
+}
 p
 {
 	font-family:arial,sans-verif;
@@ -19,7 +32,11 @@ body
 {
  display: flex;
  justify-content: space-between;
- margin: auto 5px;
+margin-right: 15px;
+ margin-top: 10px;
+
+
+
 }
 
 #menu
@@ -88,31 +105,51 @@ margin-top:10px;
 
 .country
 {
-	margin-left:10px;
+
+	padding-left:10px;
 	margin-top:10px;
 	height:35px;
 	border-bottom:solid 1px silver;
 
 }
 
+.b
+{
+	margin-right: 15px;
+	text-decoration: none;
+	color: black;
 
+}
 
 .a
 {
 	margin-right: 10px;
 	text-decoration: none;
 	color: grey;
+
+}
+.c
+{
+	margin-top: 10px;
+	margin-right: 15px;
+	text-decoration: none;
+	color: grey;
+
+}
+
+.a:hover {
+ text-decoration: underline black;
 }
 
 .connexion
 {
-background-color: blue;
-margin-top: -20px
+	height: 20px;
+margin-top: 20px
 font-size: 13px
-color:white;
-padding: 8px
+color: blue;
+padding: 30px
 font-weight: bold
-border-radius: 5px;
-width: 50px;
+border-radius: 2px;
+width: 55px;
 opacity:0,7;
 }
