--- a/style.css
+++ b/style.css
@@ -6,18 +6,25 @@
 	margin: auto 25px;
 	height: 30px;
 }
+#imageDropdown
+{
+
+	margin: 0%;
+
+}
 
 .blabla {
 
-    max-width: 60%;
-    min-width: 0%;
+
+    width: 487px;
     border-radius: 25px;
 		outline: 0;
     border: 1px solid gainsboro;
     margin-top: 20px;
-    padding: 15px;
-    padding-right: 200px;
-    padding-left: 70px;
+    padding: 10px;
+
+
+		margin-bottom: 15px;
 }
 p
 {
@@ -59,6 +66,7 @@ flex-direction: column;
 
 .center
 {
+	margin-left: 15px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -76,11 +84,13 @@ footer
 
 #gaucheDroite
 {
+	height: 30px;
 /*right: 0;
 left: 0;
 bottom: 0;
 :hover
 background-color: #f2f2f2; */
+border-top: solid 1px silver;
 border-bottom: solid 1px silver;
 display: flex;
 justify-content:space-between;
@@ -90,7 +100,7 @@ justify-content:space-between;
 {
  margin-left:10px;
  margin-right:30px;
- height: 35px;
+ height: 20px;
  margin-top:5px;
 }
 
@@ -98,8 +108,8 @@ justify-content:space-between;
 {
 margin-left:10px;
 margin-right:30px;
-height: 35px;
-margin-top:10px;
+height: 20px;
+margin-top:5px;
 }
 
 
@@ -107,9 +117,11 @@ margin-top:10px;
 {
 
 	padding-left:10px;
-	margin-top:10px;
+	padding-top:10px;
 	height:35px;
 	border-bottom:solid 1px silver;
+	border-top: solid 1px silver;
+	padding-bottom: 10px;
 
 }
 
