--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: flex-end;
-	margin: auto 25px;
+	margin: auto 20px;
+	margin-right: 50px;
+	margin-top: 17px;
 	height: 30px;
 }
 #imageDropdown
@@ -22,8 +24,6 @@
     border: 1px solid gainsboro;
     margin-top: 20px;
     padding: 10px;
-
-
 		margin-bottom: 15px;
 }
 p
