--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ flex-direction: column;
 text-align: center;
 align-content: center;
 align-items: center;
-margin-top: 170px;
+margin-top: 150px;
 }
 .cent
 {
@@ -155,8 +155,9 @@ margin-top:5px;
 
 .connexion
 {
+	background-color: blue;
 	height: 20px;
-margin-top: 20px
+margin-top: 17px
 font-size: 13px
 color: blue;
 padding: 30px
