--- a/style.css
+++ b/style.css
@@ -66,7 +66,16 @@ flex-direction: column;
 
 .center
 {
+	height: 30px;
 	margin-left: 15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: blink;
+}
+.google
+{
+width: 272px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
